--- a/backend/package.json
+++ b/backend/package.json
@@ -10,12 +10,7 @@
     "bcrypt": "^2.0.1",
     "body-parser": "^1.18.3",
     "express": "~4.16.0",
-    "jsonwebtoken": "^8.2.2",
-    "mongodb": "^3.0.10",
-    "mongoose": "^5.1.3",
-    "morgan": "^1.9.0",
-    "passport": "^0.4.0",
-    "passport-jwt": "^4.0.0"
+    "mongodb": "^3.0.10"
   },
   "devDependencies": {
     "nodemon": "^1.17.5"
